style.css
@font-face {
  font-family: proxima-nova;
  src: url(FontsFree-Net-proxima_nova_reg-webfont.ttf);
}

body {
  font: 12px proxima-nova;
  background-color: #191414;
}

#header {
  color: #1DB954;
  font-size: 16px;
}

#header-text {
  position: absolute;
  font-weight: bold;
  margin-left: 150px;
  margin-top: -30px;
}

head {
  color: white;
}

h3 {
  color: white;
}

.checkLabel {
  color: white;
  font-size: 16px;
}

text {
  stroke: white;
  fill: white;
}

footer {
  color: gray;
}

.tooltip {
  background: grey;
  color: white;
  border-radius: 5px;
  position: absolute;
  padding: 8px;
  pointer-events: none;
  text-align: left;
}

.axis {
  stroke: gray;
}

#chart1 {
    float: left;
    margin-top: -25px;
}

#filters {
  float: left;
  margin-top: 10px;
}

circle {
	fill: none;
	stroke: gray;
}

.hidden {
	display: none;
}

#topSongs {
  height: 590px;
  width: 350px;
  overflow-y: auto;  
  background-color: #333333;
  border-radius: 5px;
  margin-top: -20px;
} 

#topSongs a {
  color: white;
  text-decoration: none;
}

#topSongs a:hover {
  color: gray;
}

.dataPath {
  -webkit-transition: all 1s ease-in-out;
  -moz-transition: all 1s ease-in-out;
  -ms-transition: all 1s ease-in-out;
  -o-transition: all 1s ease-in-out;
  transition: all 1s ease-in-out;
}

